# septadrop

./: CMakeLists.txt  Cargo.toml  README.md
assets/: README.md  chars.txt  strip.sh
include/: .gitignore  Block.hpp  BlockType.hpp  Config.hpp  NumberRenderer.hpp  TileType.hpp
src/: Block.cpp  BlockType.cpp  Main.cpp  NumberRenderer.cpp  TileType.cpp  config.rs  main.rs
src/structs/: block.rs  block_type.rs  grid.rs  mod.rs  number_renderer.rs  tile_type.rs
