[package]
name = "septadrop"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
sfml = "0.16.0"
rand = "0.8.5"
home = "0.5.3"
gcd = "2.1.0"
const_format = "0.2.22"